src/test/deca/context/invalid/classextends13.deca

class A {
    int m;
}

class B extends A {
    void m(){}
}
